# Teacup

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
data/: empty.tsd
src/: main.cc
